--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_WP_USERNAME = herman
 VITE_WP_PASSWORD = ClmtJzta2023@
-VITE_WP_API_URL = http://projet-hermanmiller.fr/wp-json
+VITE_WP_API_URL = http://localhost/herman/wp-json
