--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vue-transitions": "^1.1.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
